# PowerliftingApi

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: cli.rs  main.rs  server.rs
backend/src/api/: mod.rs  powerlifters.rs  root.rs
data_parsing/: Cargo.toml
data_parsing/src/: database.rs  lib.rs
data_parsing/src/data/: lifter.rs  meet.rs  meet_data.rs  meet_entry.rs  mod.rs
data_parsing/src/types/: country.rs  division.rs  dots.rs  entry.rs  equipment.rs  federation.rs  meet.rs  meet_data.rs  mod.rs  sex.rs  username.rs  weight.rs  weight_class.rs
data_parsing/test_data/entries/database/test3/meet2/: entries.csv  meet.csv
data_parsing/test_data/entries/meet_database/invalid/: data.csv
data_parsing/test_data/entries/meet_database/test1/: meet.csv
data_parsing/test_data/entries/meet_entry_database/: test3.csv
data_parsing/tests/: integration_test.rs
db/: Cargo.toml
db/src/: lib.rs
db/src/data/: lifter.rs  meet.rs  meet_data.rs  meet_entry.rs  mod.rs  query.rs
db/src/databases/: database.rs  lifter_database.rs  meet_database.rs  mod.rs
db/src/entries/: export_row.rs  lifter_database.rs  meet_database.rs  mod.rs  search_result.rs
db/test_data/entries/database/test3/meet1/: entries.csv
db/test_data/entries/lifter_database/test2/: entries.csv
db/test_data/entries/lifter_database/test3/: meet.csv
db/test_data/entries/meet_entry_database/: test1.csv
db/tests/: integration_test.rs
db/tests/entries/lifter_database/test5/: entries.csv
frontend/: Cargo.toml
frontend/src/api/: mod.rs  powerlifters.rs
migrations/: Cargo.toml
migrations/src/: lib.rs  m20251113_195907_create_tables.rs
repository/: Cargo.toml  diesel.toml
repository/migrations/2025-10-06-183309-0000_init/: down.sql  up.sql
repository/src/: lib.rs  read_only_repository.rs  repository.rs  repository_trait.rs  schema.rs  write_only_repository.rs
repository/src/create/: mod.rs
repository/src/models/: mod.rs
repository/src/models/create/: insertable_meet.rs  mod.rs  new_entry.rs  new_meet.rs
repository/src/models/read/: entry.rs  meet.rs  mod.rs  ranked_entry.rs
repository/src/models/scaffolded/: entries.rs  meets.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs
repository/src/models/types/: country.rs  division.rs  entry.rs  equipment.rs  federation.rs  meet.rs  mod.rs  ranked_entry.rs  sex.rs  username.rs  weight.rs  weight_class.rs  weight_class_kind.rs
repository/src/models/write/: entry.rs  meet.rs  mod.rs
repository/src/traits/: into_qualified_column.rs  into_qualified_columns.rs  mod.rs  qualified_column.rs  qualified_columns.rs
search/: Cargo.toml
search/src/: lib.rs  search_engine.rs
search/src/traits/: matches_query.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
server/src/api/: mod.rs  powerlifters.rs  root.rs
src/: cli.rs  main.rs  server.rs
src/api/: mod.rs  powerlifters.rs  root.rs  styles.rs
src/cli/: mod.rs
src/data_fetching/: mod.rs
src/data_fetching/entries/: export_row.rs  lifter_database.rs  meet_database.rs  mod.rs  search_result.rs
src/data_fetching/types/: division.rs  dots.rs  equipment.rs  lifter.rs  meet.rs  meet_entry.rs  mod.rs  place.rs  sex.rs  username.rs  weight.rs  weight_class.rs
tests/data_fetching/entries/lifter_database/test1/: entries.csv
tests/data_fetching/entries/lifter_database/test2/: entries.csv
tests/data_fetching/entries/lifter_database/test3/: entries.csv
tests/data_fetching/entries/lifter_database/test4/: entries.csv
tests/data_fetching/entries/lifter_database/test6/: entries.csv
tests/data_fetching/entries/meet_database/: test1.csv  test2.csv  test4.csv
types/: Cargo.toml
types/src/: country.rs  country_dto.rs  division.rs  division_dto.rs  dots.rs  dots_dto.rs  entry.rs  entry_dto.rs  equipment.rs  equipment_dto.rs  export_row.rs  federation.rs  federation_dto.rs  lib.rs  meet.rs  meet_data_dto.rs  meet_dto.rs  place.rs  place_dto.rs  prelude.rs  query.rs  query_dto.rs  sex.rs  sex_dto.rs  username.rs  username_dto.rs  weight.rs  weight_class.rs  weight_class_dto.rs  weight_dto.rs
types/src/filters/: division_filter.rs  division_filter_dto.rs  equipment_filter.rs  equipment_filter_dto.rs  federation_filter.rs  federation_filter_dto.rs  mod.rs  query.rs  query_dto.rs  sex_filter.rs  sex_filter_dto.rs
types/src/traits/: matches.rs  matches_query.rs  mod.rs
