[package]
name = "powerlifting_api"
version = "0.1"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-htmx = "0.3.0"
actix-web = "4.11.0"
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
maud = { version = "*", features = ["actix-web"] }
serde = { version = "1.0.219", features = ["derive"] }
