[package]
name = "powerlifting_api"
version = "0.6.0"
edition = "2021"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.25.0"

[dependencies]
actix-files = "0.6.6"
actix-htmx = "0.3.0"
actix-web = "4.11.0"
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
csv = "1.3.1"
env_logger = "0.11.8"
log = "0.4.27"
maud = { version = "*", features = ["actix-web"] }
serde = { version = "1.0.219", features = ["derive"] }
walkdir = "2.5.0"
