[package]
name = "data_parsing"
edition = "2024"
version.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.25.0"
serde_test = "1.0.177"

[dependencies]
anyhow = "1.0.98"
csv = "1.3.1"
itertools = "0.14.0"
log = "0.4.27"
repository = { version = "0.8.0", path="../repository/" }
rust_decimal = "1.39.0"
serde = { version = "1.0.219", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
types = { version = "0.8.0", path="../types/" }
walkdir = "2.5.0"
