[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.25.0"

[dependencies]
types = { path="../types/" }
anyhow = "1.0.98"
itertools = "0.14.0"
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
walkdir = "2.5.0"
log = "0.4.27"
