[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.25.0"

[dependencies]
anyhow = "1.0.98"
csv = "1.3.1"
itertools = "0.14.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
types = { path="../types/" }
walkdir = "2.5.0"
