[package]
name = "repository"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.25.0"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
rust_decimal = "1.39.0"
sea-orm = { version = "1.1.19", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
types = { path="../types/" }
migrations = { path="../migrations/" }
tracing = "0.1.41"
