[package]
name = "repository"
edition = "2024"
version.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.25.0"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
migrations = { path="../migrations/" }
rust_decimal = "1.39.0"
sea-orm = { version = "1.1.19", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
tracing = "0.1.41"
types = { path="../types/" }
