[package]
name = "server"
version = "0.7.0"
edition = "2024"

[dev-dependencies]
# pretty_assertions = "1.4.1"
# rstest = "0.25.0"

[dependencies]
db = { path="../db/" }
types = { path="../types/" }
actix-files = "0.6.6"
actix-htmx = "0.3.0"
actix-web = "4.11.0"
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
maud = { version = "*", features = ["actix-web"] }
serde = { version = "1.0.219", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
