[package]
name = "server"
version = "0.7.0"
edition = "2024"
default-run = "server"

[dependencies]
actix-files = "0.6.6"
actix-htmx = "0.3.0"
actix-web = "4.11.0"
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
db = { path="../db/" }
env_logger = "0.11.8"
log = "0.4.27"
maud = { version = "*", features = ["actix-web"] }
migrations = { path="../migrations/" }
repository = { version = "0.1.0", path = "../repository" }
strum = "0.27.2"
types = { path="../types/" }
