[package]
name = "types"
edition = "2024"
version.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.25.0"
serde_test = "1.0.177"

[dependencies]
anyhow = "1.0.98"
rust_decimal = "1.39.0"
serde = { version = "1.0.219", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
